--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Ola´mundo</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero facilis laudantium dicta voluptas, eaque sunt accusamus cum id repudiandae tempora, reiciendis officiis veniam assumenda qui sed, commodi numquam possimus aliquam?</p>
+    <h2>deu certo</h2>
 </body>
 </html>
