--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site exemplo</title>
-    <link rel="stylesheet" href="">
+    <title>Site TIME</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico"
 </head>
 <body>
-    <h1>Ola´mundo</h1>
-    <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero facilis laudantium dicta voluptas, eaque sunt accusamus cum id repudiandae tempora, reiciendis officiis veniam assumenda qui sed, commodi numquam possimus aliquam?</p>
-    <h2>deu certo</h2>
-    <h3>subi o site</h3>
+    <h1>th</h1>
+    <div>
+        
+    </div>
+
 </body>
 </html>
